# Titanic-Survival-Prediction-ML

./: .gitignore  .hintrc  ML_.md  Titanic_Survival_Prediction_using_Machine_Learning_in_Python.ipynb  appunti.txt  fcc_MAGIC_example.ipynb  fcc_MAGIC_example_original.ipynb  fcc_bikes_regression.ipynb  index.html  package-lock.json  package.json
ML_2026/: deap.txt  ml_03.py  ml_04.py
ML_week_01/: titanic-voting-classifier-0-78947.ipynb
ML_week_02/auto_ml_pipeline/: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
ML_week_02/auto_ml_pipeline/automl/: __init__.py  __main__.py  pipeline.py
ML_week_02/auto_ml_pipeline/automl/eda/: __init__.py  missing_handler.py  outlier_detector.py  profiler.py  type_detector.py
ML_week_02/auto_ml_pipeline/automl/evaluation/: analyzer.py  cross_validator.py  metrics.py
ML_week_02/auto_ml_pipeline/automl/features/: categorical.py  datetime_features.py  numeric.py  selector.py  text_features.py
ML_week_02/auto_ml_pipeline/automl/models/: ensemble.py  optimizer.py  registry.py  screener.py
ML_week_02/auto_ml_pipeline/automl/reporting/: api_generator.py  html_report.py
ML_week_02/auto_ml_pipeline/automl/reporting/templates/: api_template.py.j2  report.html.j2
ML_week_02/auto_ml_pipeline/automl/utils/: config.py  logger.py  serializer.py
ML_week_02/auto_ml_pipeline/automl_lite.egg-info/: PKG-INFO  SOURCES.txt
ML_week_02/auto_ml_pipeline/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ML_week_02/auto_ml_pipeline/catboost_info/learn/: events.out.tfevents
ML_week_02/auto_ml_pipeline/configs/: default.yaml  fast.yaml  thorough.yaml
ML_week_02/auto_ml_pipeline/examples/: binary_classification.py  multiclass.py  regression.py
ML_week_02/auto_ml_pipeline/tests/: conftest.py  test_eda.py  test_features.py  test_models.py  test_pipeline.py  test_reporting.py
ML_week_02/defect_detection/: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
ML_week_02/defect_detection/.streamlit/: config.toml
ML_week_02/defect_detection/configs/deployment/: api_config.yaml  inference_config.yaml
ML_week_02/defect_detection/configs/model/: yolov8m.yaml  yolov8n.yaml  yolov8s.yaml
ML_week_02/defect_detection/configs/training/: augmentation.yaml  base.yaml  hyperopt.yaml
ML_week_02/defect_detection/data/: dataset.yaml
ML_week_02/defect_detection/docker/: Dockerfile  Dockerfile.training  docker-compose.yml
ML_week_02/defect_detection/experiments/runs/train/defect_s_e100/: args.yaml
ML_week_02/defect_detection/scripts/: benchmark.py  download_dataset.sh  export_model.sh  train.sh
ML_week_02/defect_detection/src/api/: main.py  routes.py  schemas.py  websocket.py
ML_week_02/defect_detection/src/data/: annotation_converter.py  augmentation.py  dataset_splitter.py  downloader.py  synthetic_generator.py
ML_week_02/defect_detection/src/evaluation/: confusion_matrix.py  metrics.py  visualization.py
ML_week_02/defect_detection/src/inference/: api_inference.py  batch_processor.py  predictor.py  webcam_detector.py
ML_week_02/defect_detection/src/models/: ensemble.py  model_exporter.py  yolo_trainer.py
ML_week_02/defect_detection/src/ui/: gradio_app.py  streamlit_app.py
ML_week_02/defect_detection/src/utils/: config.py  logging.py  visualization.py
ML_week_02/defect_detection/tests/: test_api.py  test_augmentation.py  test_data_loader.py  test_inference.py
ML_week_03/nas/: Makefile  README.md  pyproject.toml  requirements.txt
ML_week_03/nas/configs/: default.yaml  fast.yaml  smoke.yaml
ML_week_03/nas/data/: .gitkeep
ML_week_03/nas/nas_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ML_week_03/nas/notebooks/: .gitkeep  nas_analysis.ipynb
ML_week_03/nas/outputs/: .gitkeep
ML_week_03/nas/outputs/architectures/: gen_000_best.json  gen_001_best.json  gen_002_best.json
ML_week_03/nas/outputs/logs/: all_genomes.json  fitness_history.json
ML_week_03/nas/scripts/: compare_resnet.py  run_search.py  train_best.py  visualize.py
ML_week_03/nas/src/: __init__.py  builder.py  evolution.py  fitness.py  genome.py  predictor.py  search_space.py  trainer.py  utils.py  visualization.py  weight_inherit.py
ML_week_03/nas/tests/: test_builder.py  test_evolution.py  test_genome.py  test_predictor.py  test_trainer.py  test_weight_inherit.py
ai-camera/: index.html
avionics-dt-codegen/: CMakeLists.txt  README.md
avionics-dt-codegen/build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  codegen_tool  compile_commands.json  unit_tests  validation_harness
avionics-dt-codegen/include/: codegen.hpp  tree_parser.hpp  wcet_analyzer.hpp
avionics-dt-codegen/output/: generated_classifier.cpp  generated_classifier.hpp  wcet_report.txt
avionics-dt-codegen/sample_data/: sample_tree.json  test_data.csv
avionics-dt-codegen/scripts/: export_tree.py
avionics-dt-codegen/src/: codegen.cpp  main_codegen.cpp  tree_parser.cpp  validation_harness.cpp  wcet_analyzer.cpp
avionics-dt-codegen/tests/: test_main.cpp
benchmark/: .eslintrc.js  Makefile  index.html  jest.config.js  package-lock.json  package.json
breast-cancer-ml/: .gitignore  README.md  requirements.txt  setup.py
briscola/: README.md  server.py
briscola-p2p/: README.md  game.html  index.html  package-lock.json  package.json
briscola-solo/: app.py
bureau-portals/: README.md  index.html
card-game/: README.md  index.html
chaos-deckbuilder/: README.md  app.py  requirements.txt
clustering_study/: README.md  config.py  requirements.txt
coevo-predator-prey/: README.md  agents.py  behavior_analysis.py  coevolution.py  config.py  fitness.py  gp_setup.py  logging_utils.py  main.py  requirements.txt  visualization.py  world.py
cruise-smm/: README.md  index.html
daisy-field/: app.js  confetti.js  daisy.js  index.html  manifest.json  service-worker.js  style.css
decision_tree_study/: README.md  config.py  requirements.txt
dressed-to-love/: README.md  index.html
ecosim/: README.md  analysis_example.py  config.py  entities.py  environment.py  logging_utils.py  main.py  simulation.py
(+1446 files in other folders)
