cmake_minimum_required(VERSION 3.14)
project(avionics_dt_codegen
    VERSION 1.0.0
    LANGUAGES CXX
    DESCRIPTION "Avionics Decision Tree Code Generator and Inference Engine"
)

# ---------------------------------------------------------------------------
# Global settings
# ---------------------------------------------------------------------------

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Compiler warnings (applied to all targets).
add_compile_options(
    -Wall -Wextra -Wpedantic
    -Wconversion -Wsign-conversion
    -Wcast-align -Wold-style-cast
    -Wnon-virtual-dtor
)

# Release flags.
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")

# Option: cross-compile for embedded ARM target.
option(BUILD_EMBEDDED "Cross-compile generated classifier for ARM Cortex-M4" OFF)

# ---------------------------------------------------------------------------
# nlohmann/json — fetch single-include header
# ---------------------------------------------------------------------------

include(FetchContent)
FetchContent_Declare(
    nlohmann_json
    URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz
    URL_HASH SHA256=d6c65aca6b1ed68e7a182f4757257b107ae403032760ed6ef121c9d55e81757d
)
FetchContent_MakeAvailable(nlohmann_json)

# ---------------------------------------------------------------------------
# Library: avionics_dt_lib (parser + codegen + WCET analyzer)
# ---------------------------------------------------------------------------

add_library(avionics_dt_lib STATIC
    src/tree_parser.cpp
    src/codegen.cpp
    src/wcet_analyzer.cpp
)

target_include_directories(avionics_dt_lib
    PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(avionics_dt_lib
    PUBLIC nlohmann_json::nlohmann_json
)

# ---------------------------------------------------------------------------
# Target 1: codegen_tool — host-side parser + code generator binary
# ---------------------------------------------------------------------------

add_executable(codegen_tool
    src/main_codegen.cpp
)

target_link_libraries(codegen_tool
    PRIVATE avionics_dt_lib
)

# ---------------------------------------------------------------------------
# Target 2: unit_tests — hand-rolled assert-based test suite
# ---------------------------------------------------------------------------

add_executable(unit_tests
    tests/test_main.cpp
)

target_link_libraries(unit_tests
    PRIVATE avionics_dt_lib
)

enable_testing()
add_test(NAME avionics_dt_unit_tests COMMAND unit_tests)

# ---------------------------------------------------------------------------
# Target 3: validation_harness — compiles generated classifier + harness
#
# This target depends on generated files that must be produced by running
# codegen_tool first.  The user provides the output directory via
# GENERATED_DIR (default: ${CMAKE_CURRENT_SOURCE_DIR}/output).
# ---------------------------------------------------------------------------

set(GENERATED_DIR "${CMAKE_CURRENT_SOURCE_DIR}/output" CACHE PATH
    "Directory containing generated_classifier.hpp and .cpp")

# Only build validation_harness if generated files exist.
if(EXISTS "${GENERATED_DIR}/generated_classifier.hpp" AND
   EXISTS "${GENERATED_DIR}/generated_classifier.cpp")

    add_executable(validation_harness
        src/validation_harness.cpp
        ${GENERATED_DIR}/generated_classifier.cpp
    )

    target_include_directories(validation_harness
        PRIVATE ${GENERATED_DIR}
    )

    add_test(NAME avionics_dt_validation COMMAND validation_harness
        ${CMAKE_CURRENT_SOURCE_DIR}/sample_data/test_data.csv
        --threshold 0.95
    )

else()
    message(STATUS
        "validation_harness: skipped — generated files not found in ${GENERATED_DIR}. "
        "Run codegen_tool first to generate them."
    )
endif()

# ---------------------------------------------------------------------------
# Target 4: embedded_target — cross-compile for ARM Cortex-M4
#           Only built when BUILD_EMBEDDED=ON.
# ---------------------------------------------------------------------------

if(BUILD_EMBEDDED)
    if(NOT EXISTS "${GENERATED_DIR}/generated_classifier.hpp")
        message(FATAL_ERROR
            "BUILD_EMBEDDED requires generated files in ${GENERATED_DIR}")
    endif()

    # Create a minimal embedded main that calls classify() once.
    set(EMBEDDED_MAIN "${CMAKE_CURRENT_BINARY_DIR}/embedded_main.cpp")
    file(WRITE ${EMBEDDED_MAIN} [[
/**
 * @file embedded_main.cpp
 * @brief Minimal bare-metal entry point for the generated classifier.
 * @note AUTO-GENERATED by CMake for cross-compilation testing.
 */
#include "generated_classifier.hpp"

// Volatile to prevent dead-code elimination.
static volatile avionics_ml::Label g_result;

// Dummy feature vector (replaced by real sensor data in production).
static const float g_features[kNumFeatures] = {};

extern "C" int main(void) {
    g_result = avionics_ml::classify(g_features);
    while (true) {
        // Bare-metal infinite loop (RTOS would schedule tasks here).
    }
    return 0;
}
]])

    add_executable(embedded_target
        ${EMBEDDED_MAIN}
        ${GENERATED_DIR}/generated_classifier.cpp
    )

    target_include_directories(embedded_target
        PRIVATE ${GENERATED_DIR}
    )

    # ARM Cortex-M4 compiler flags.
    target_compile_options(embedded_target PRIVATE
        -mcpu=cortex-m4
        -mfpu=fpv4-sp-d16
        -mfloat-abi=hard
        -mthumb
        -Os
        -fno-exceptions
        -fno-rtti
        -ffunction-sections
        -fdata-sections
    )

    target_link_options(embedded_target PRIVATE
        -mcpu=cortex-m4
        -mfpu=fpv4-sp-d16
        -mfloat-abi=hard
        -mthumb
        -nostartfiles
        -Wl,--gc-sections
        -specs=nosys.specs
    )

    set_target_properties(embedded_target PROPERTIES
        SUFFIX ".elf"
    )
endif()
