[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-from-scratch"
version = "0.1.0"
description = "Evolutionary Neural Architecture Search for CIFAR-10"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "networkx>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["src*"]
